<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Pelatihan.JobActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="Kembali ke halaman sebelumnya"
            android:src="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txt_kerja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="119dp"
            android:layout_marginTop="0dp"
            android:text="@string/judul_kerja"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:background="@color/white"
            android:id="@+id/icon_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:contentDescription="Mencari.."
            android:src="@drawable/ic_search"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:background="@color/white"
            android:id="@+id/icon_bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="-1dp"
            android:contentDescription="Ke halaman riwayat"
            android:src="@drawable/ic_bell"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:drawableEnd="@drawable/ic_dropdown"
        android:id="@+id/btn_kategori"
        android:layout_width="140dp"
        android:background="@drawable/btn_act_blue"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginEnd="40dp"
        android:text="@string/kategori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space1" />

    <androidx.appcompat.widget.AppCompatButton
        android:drawableEnd="@drawable/ic_flag"
        android:id="@+id/btn_simpan"
        android:layout_width="140dp"
        android:textColor="@color/blue"
        android:background="@drawable/btn_outline_blue"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        app:layout_constraintEnd_toStartOf="@+id/btn_kategori"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space1" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/kerjaRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_simpan"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/kerja_item" />


</androidx.constraintlayout.widget.ConstraintLayout>